# clearpath_oak

./: CHANGELOG.rst  CMakeLists.txt  README.md  depends.rosinstall  package.xml
config/: categories.yaml
config/camera/: stereo.yaml
launch/: depth.launch  oak.launch
msg/: BoundingBox2D.msg  DetectedObject.msg  DetectedObjects.msg
nodes/: oak_node  stereo_node
scripts/: setup.sh
urdf/: oak_d.urdf
