<?xml version="1.0"?>
<package format="2">
  <name>clearpath_oak</name>
  <version>0.1.0</version>
  <description>Experimental ROS driver for the OAK-D camera</description>
  <maintainer email="civerachb@clearpathrobotics.todo">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
